package pumlFromJava.pumlDocletV3;

public interface PumlElement {

    String toUml();

}
