@startuml

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide empty members

Package "pumlFromJava" {

class Java2Puml

class PumlDoclet implements Doclet

class PumlElement

class PumlDiagram extends PumlElement

class PumlClass extends PumlElement

class PumlEnum extends PumlElement

class PumlInterface extends PumlElement

class PumlPackage extends PumlElement

class PumlLink

class PumlVariable extends PumlElement

class PumlParameter extends PumlElement

class PumlMethod extends PumlElement

enum LinkType

enum VariableKind

PumlDoclet ..> PumlDiagram : use
Java2Puml ..> PumlDoclet : lance
PumlDiagram o...> PumlPackage : use
PumlPackage o..> PumlClass : use
PumlPackage o..> PumlInterface : use
PumlPackage o..> PumlEnum : use
PumlLink ..> LinkType : use
PumlInterface o--> PumlLink
PumlClass o--> PumlLink
VariableKind ..> PumlVariable
PumlParameter o..> PumlVariable: use
PumlMethod o..> PumlParameter : use
}

@enduml

